Cluster Working on map

--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@ body {
         margin-right: auto;
         border-radius: 50%;
         width: 80%;
-        color: grey;
+        color:#0F78C3;
     }
 
     .cenBanner {
